# acpl-softmatter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
code/soft_matter/: dynamics.py  energy.py  sample.py
notebooks/: 1_forward_flux.sync.ipynb  1_monte_carlo.sync.ipynb  2_forward_flux.sync.ipynb  2_monte_carlo.sync.ipynb  3_monte_carlo.sync.ipynb  monte_carlo.sync.ipynb
report/: main.tex
report/sections/: ex1.tex  ex2.tex  preamble.tex  template.tex
